<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lawbot.LawBotFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <!--   progres bar     -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_dark"
                android:paddingHorizontal="16dp"
                android:paddingTop="36dp"
                android:paddingBottom="84dp">


                <TextView
                    android:id="@+id/tv_tanya_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/lara"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_tanya_desc_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/desc_lara"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/iv_question"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_tanya_desc" />

                <ImageView
                    android:id="@+id/iv_question"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:src="@drawable/questions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="-46dp"
            android:layout_marginBottom="6dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp">


                <EditText
                    android:id="@+id/ed_chat"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:gravity="top"
                    android:hint="@string/problem_desc"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ed_chat">

                    <ImageView
                        android:id="@+id/previewImageView"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@color/blue_light"
                        android:visibility="gone"
                        app:layout_constraintCircleRadius="12dp" />
                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/blue_dark"
                    android:text="Konsultasikan"
                    app:cornerRadius="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_image" />

                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintBottom_toBottomOf="@id/btn_chat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_chat" />

                <ImageView
                    android:id="@+id/image_open"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_image"
                    app:layout_constraintBottom_toBottomOf="@id/btn_chat"
                    app:layout_constraintEnd_toStartOf="@id/camera"
                    app:layout_constraintTop_toTopOf="@+id/btn_chat" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>